# qbittorrent-automate

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
src/qbittorrent-automate/: main.py
